# OMPL_DRONES

./: CMakeLists.txt  README.md  geometric_path.txt  run_acados_one.sh  solution_path.txt
acados_system/: acados_settings.py  animate_trajectories.py  common.py  config.json  dynamics_output.txt  grid_run.py  main.py  planner_ocp.json  plot_trajectories_one.py  scale.py  sys_dynamics.py  test_dynamics.py  trajectory.txt  visualize_mpl.py
acados_system/c_generated_code/: Makefile  acados_sim_solver_drone_FrenSer.c  acados_sim_solver_drone_FrenSer.h  acados_solver_drone_FrenSer.c  acados_solver_drone_FrenSer.h  main_drone_FrenSer.c  main_sim_drone_FrenSer.c
acados_system/c_generated_code/drone_FrenSer_constraints/: drone_FrenSer_constr_h_e_fun.c  drone_FrenSer_constr_h_e_fun_jac_uxt_zt.c  drone_FrenSer_constr_h_fun.c  drone_FrenSer_constr_h_fun_jac_uxt_zt.c
acados_system/c_generated_code/drone_FrenSer_cost/: drone_FrenSer_cost_y_0_fun.c  drone_FrenSer_cost_y_0_fun_jac_ut_xt.c  drone_FrenSer_cost_y_0_hess.c  drone_FrenSer_cost_y_e_fun.c  drone_FrenSer_cost_y_e_fun_jac_ut_xt.c  drone_FrenSer_cost_y_e_hess.c  drone_FrenSer_cost_y_fun.c  drone_FrenSer_cost_y_fun_jac_ut_xt.c  drone_FrenSer_cost_y_hess.c
acados_system/c_generated_code/drone_FrenSer_model/: drone_FrenSer_expl_ode_fun.c  drone_FrenSer_expl_vde_adj.c
acados_system/tracks/: scaled_helix_track.txt
include/: ExperimentConfig.h  PayloadClasses.h  PayloadFourDrones.h  PayloadOneDrone.h  PayloadTwoDrones.h
other_stuff/: MultiDronePlanning.h  PayloadFourDemo.cpp  PayloadFourDrones.cpp  PayloadFourDrones.h  PayloadTwoDemo_old.cpp  PayloadTwoDrones copy.cpp  PayloadTwoDrones.h  PayloadTwoDrones_old.cpp  PayloadTwoDrones_old.h  QuadrotorDemo.cpp  QuadrotorPlanning.cpp  propagation_print.cpp  stateTransition.cpp  stateTransition.h
other_stuff/old_acados/: acados_settings.py  acados_sim.json  common.py  main.py  planner_accel.json  sys_dynamics.py  visualize_mpl.py
other_stuff/old_acados/c_generated_code/: Makefile  acados_sim_solver.pxd  acados_sim_solver_payload_accel.c  acados_sim_solver_payload_accel.h  acados_sim_solver_payload_nav.c  acados_sim_solver_payload_nav.h  acados_solver.pxd  acados_solver_payload_accel.c  acados_solver_payload_accel.h  acados_solver_payload_nav.c  acados_solver_payload_nav.h  main_payload_accel.c  main_payload_nav.c  main_sim_payload_accel.c  main_sim_payload_nav.c
other_stuff/old_acados/c_generated_code/payload_accel_cost/: payload_accel_cost.h  payload_accel_cost_y_0_fun.c  payload_accel_cost_y_0_fun_jac_ut_xt.c  payload_accel_cost_y_0_hess.c  payload_accel_cost_y_e_fun.c  payload_accel_cost_y_e_fun_jac_ut_xt.c  payload_accel_cost_y_e_hess.c  payload_accel_cost_y_fun.c  payload_accel_cost_y_fun_jac_ut_xt.c  payload_accel_cost_y_hess.c
other_stuff/old_acados/c_generated_code/payload_accel_model/: payload_accel_expl_ode_fun.c  payload_accel_expl_vde_adj.c  payload_accel_expl_vde_forw.c  payload_accel_model.h
other_stuff/old_acados/c_generated_code/payload_nav_cost/: payload_nav_cost.h  payload_nav_cost_y_0_fun.c  payload_nav_cost_y_0_fun_jac_ut_xt.c  payload_nav_cost_y_0_hess.c  payload_nav_cost_y_e_fun.c  payload_nav_cost_y_e_fun_jac_ut_xt.c  payload_nav_cost_y_e_hess.c  payload_nav_cost_y_fun.c  payload_nav_cost_y_fun_jac_ut_xt.c  payload_nav_cost_y_hess.c
other_stuff/old_acados/c_generated_code/payload_nav_model/: payload_nav_expl_ode_fun.c  payload_nav_expl_vde_adj.c  payload_nav_expl_vde_forw.c  payload_nav_model.h
other_stuff/utter_trash/: AcadosMPC.cpp  AcadosMPC.h  AcadosOneDemo.cpp  AcadosOneDrone.cpp  AcadosOneDrone.h  AcadosPythonBridge.cpp  AcadosPythonBridge.h  MPCSampler.cpp  MPCSampler.h  MultiDroneDemo.cpp  MultiDronePlanning.cpp  PayloadTwoDemo.cpp  PayloadTwoDrones.cpp  PayloadTwoDrones_sucks.cpp  model_payload.py  solve_one_step.py  stateTransition copy.cpp  system_model copy.py  system_model_old.py  test.cpp
other_stuff/works/: PayloadFourDemo.cpp  PayloadFourDrones.h  PayloadTwoDemo.cpp
quadrotor_nav/: common.py  planner_ocp.json  visualize_mpl.py
quadrotor_nav/c_generated_code/: Makefile  acados_solver_drone_FrenSer.c
quadrotor_nav/c_generated_code/drone_FrenSer_constraints/: drone_FrenSer_constr_h_e_fun.c  drone_FrenSer_constr_h_e_fun_jac_uxt_zt.c  drone_FrenSer_constr_h_fun.c  drone_FrenSer_constr_h_fun_jac_uxt_zt.c
quadrotor_nav/c_generated_code/drone_FrenSer_cost/: drone_FrenSer_cost_y_0_fun.c  drone_FrenSer_cost_y_0_fun_jac_ut_xt.c  drone_FrenSer_cost_y_0_hess.c  drone_FrenSer_cost_y_e_fun.c  drone_FrenSer_cost_y_e_fun_jac_ut_xt.c  drone_FrenSer_cost_y_e_hess.c  drone_FrenSer_cost_y_fun.c  drone_FrenSer_cost_y_fun_jac_ut_xt.c  drone_FrenSer_cost_y_hess.c
quadrotor_nav/c_generated_code/drone_FrenSer_model/: drone_FrenSer_expl_ode_fun.c  drone_FrenSer_expl_vde_adj.c  drone_FrenSer_expl_vde_forw.c
src/: PayloadFourDemo.cpp  PayloadFourDrones.cpp  PayloadOneDemo.cpp  PayloadOneDrone.cpp  PayloadTwoDemo.cpp  PayloadTwoDrones.cpp  stateTransition.cpp  test.cpp
src/meshes/: Apartment_env.dae  blocked.dae  box.dae  box_collision.dae  drone.dae  empty_env.dae  env_2.dae  env_3.dae  env_4.dae  geometric_collision.dae
src/python/: acados_ocp.json  check.py  extract_se3.py  geometric_path.txt  geometric_planner.py  grid_results.csv  grid_results.html  ompl_app_multiple.py  plot_trajectories.py  plot_trajectories_2D.py  plot_trajectories_3D.py  plot_trajectories_four.py  plot_trajectories_one.py  plot_trajectories_two.py  print_solution.py  run_grid.py  system_model.py
